--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -121,9 +121,13 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
 <div id="topbar" class="sidebar">
 <div class="top-panel">
   <div class="mobile-container">
-    <h2>Fallout London</h2>
-    <button class="topbar-btn" id="toggle-left">Navigation</button>
-    <button class="topbar-btn" id="toggle-right">Progress</button>
+    <div class="mobile-title">
+      <h2>Fallout London</h2>
+    </div>
+    <div>
+      <button class="topbar-btn" id="toggle-left">Navigation</button>
+      <button class="topbar-btn" id="toggle-right">Progress</button>
+    </div>
   </div>
 </div>
 </div>
