--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -208,6 +208,7 @@ let maps = {
       'StPaulsWorld': { scale: 1, offset: {x:3000, y:0} },
       'CoventGardenWorldSpace': { scale: 1, offset: {x:1500, y:-2000} },
       'IWMWorld':{ scale: 1, offset: {x:0, y:0} },
+      'DumpWorld':{ scale: 1, offset: {x:66809.976562, y:-56285.085937} },
     },
   },
   'WestminsterWorld' : { name: 'Westminster', scale: 1.9, offset: {x:7000, y:22000} },
