--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -209,6 +209,7 @@ let maps = {
       'CoventGardenWorldSpace': { scale: 1, offset: {x:1500, y:-2000} },
       'IWMWorld':{ scale: 1, offset: {x:0, y:0} },
       'DumpWorld':{ scale: 1, offset: {x:66809.976562, y:-56285.085937} },
+      'BromleyPindarWorld':{ scale: 1, offset: {x:33841.644531, y:-78117.046875} },
     },
   },
   'WestminsterWorld' : { name: 'Westminster', scale: 1.9, offset: {x:7000, y:22000} },
